# ChangeLog for sci-biology/emboss
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/emboss/ChangeLog,v 1.41 2006/12/10 18:49:20 ribosome Exp $

  10 Dec 2006; Olivier Fisette <ribosome@gentoo.org>
  -emboss-3.0.0-r1.ebuild, emboss-4.0.0.ebuild:
  Pruned old version. Removed ppc-macos keyword, as grobian said the
  package and its dependencies were fully moved into "prefix".

  20 Nov 2006; <blubb@gentoo.org> emboss-4.0.0.ebuild:
  stable on amd64

  15 Nov 2006; Markus Rothe <corsair@gentoo.org> emboss-4.0.0.ebuild:
  Stable on ppc64; bug #153766

  03 Nov 2006; nixnut <nixnut@gentoo.org> emboss-4.0.0.ebuild:
  Stable on ppc wrt bug 153766

  03 Nov 2006; Jeff Gardner <je_fro@gentoo.org> emboss-3.0.0-r1.ebuild:
  Added ~sparc to emboss-3 for embassy-phylip-3.6b.

  02 Nov 2006; Olivier Fisette <ribosome@gentoo.org> emboss-4.0.0.ebuild:
  Added to x86.

  18 Aug 2006; Jason Wever <weeve@gentoo.org> emboss-4.0.0.ebuild:
  Added ~sparc keyword wrt bug #144241.

*emboss-4.0.0 (21 Jul 2006)

  21 Jul 2006; Olivier Fisette <ribosome@gentoo.org> +emboss-4.0.0.ebuild:
  New upstream version. See change log:
  "http://emboss.sourceforge.net/developers/changelog.html".

  20 Apr 2006; Olivier Fisette <ribosome@gentoo.org> -emboss-3.0.0.ebuild:
  Removed old revision.

  08 Apr 2006; Simon Stelling <blubb@gentoo.org> emboss-3.0.0-r1.ebuild:
  stable on amd64

  22 Feb 2006; Fabian Groffen <grobian@gentoo.org> ChangeLog:
  Marked ppc-macos stable (bug #123332)

  22 Feb 2006; <nixnut@gentoo.org> emboss-3.0.0-r1.ebuild:
  Stable on ppc. bug 123332

  21 Feb 2006; Markus Rothe <corsair@gentoo.org> emboss-3.0.0-r1.ebuild:
  Stable on ppc64; bug #123332

  20 Feb 2006; Joshua Jackson <tsunam@gentoo.org> emboss-3.0.0-r1.ebuild:
  Stable on x86; bug #123332

  19 Feb 2006; Olivier Fisette <ribosome@gentoo.org> emboss-3.0.0-r1.ebuild:
  Block old versions of pscan to avoid file collisions (see bug #116236).
