@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/emboss
-# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/emboss/ChangeLog,v 1.41 2006/12/10 18:49:20 ribosome Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/emboss/ChangeLog,v 1.42 2007/04/09 23:06:58 je_fro Exp $
+
+  09 Apr 2007; Jeff Gardner <je_fro@gentoo.org> +files/22emboss,
+  -files/22emboss-r1, emboss-4.0.0.ebuild:
+  Fixed to use doenvd wrt bug #173884
 
   10 Dec 2006; Olivier Fisette <ribosome@gentoo.org>
   -emboss-3.0.0-r1.ebuild, emboss-4.0.0.ebuild:
